--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="./assets/css/main.css">
     </head>
     <body>
-
+        <h1>Hello, World!</h1>
     </body>
 </html>
